--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brown-patience",
-  "homepage": "http://thebrownpatiencecompany.com.ng/",
+  "homepage": "https://thebrownpatiencecompany.com.ng/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
